--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "test deployment of node",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node main.js"
+    "start": "node main.js",
+    "dev-start": "nodemon main.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,8 @@
     "bcryptjs": "^2.4.3",
     "multer": "^1.3.0",
     "tedious": "^2.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
