--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test deployment of node",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js",
+    "start": "./node_modules/.bin/webpack -d | node main.js",
     "dev-start": "nodemon main.js"
   },
   "repository": {
@@ -19,12 +19,20 @@
   "homepage": "https://github.com/Jamppa88/NodeTest#readme",
   "dependencies": {
     "async": "^2.5.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
-    "bcryptjs": "^2.4.3",
     "multer": "^1.3.0",
-    "tedious": "^2.0.1"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "tedious": "^2.0.1",
+    "webpack": "^3.8.1"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
