--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "./node_modules/.bin/webpack -d && node main.js",
-    "dev-start": "./node_modules/.bin/webpack -d && nodemon main.js"
+    "dev-start": "./node_modules/.bin/webpack -d && nodemon main.js",
+    "build": "./node_modules/.bin/webpack -d"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "jquery": "^3.2.1",
     "multer": "^1.3.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
