--- a/package.json
+++ b/package.json
@@ -20,16 +20,22 @@
   "homepage": "https://github.com/Jamppa88/NodeTest#readme",
   "dependencies": {
     "async": "^2.5.0",
+    "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "eslint": "^4.10.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-react": "^7.4.0",
     "express": "^4.16.2",
     "jquery": "^3.2.1",
+    "loader-runner": "^2.3.0",
     "multer": "^1.3.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -40,7 +46,9 @@
     "nodemon": "^1.12.1"
   },
   "nodemonConfig": {
-    "ignore": ["public/*"],
+    "ignore": [
+      "public/*"
+    ],
     "events": {
       "restart": "node_modules\\.bin\\webpack -d"
     }
