--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,6 @@
 {
-    "presets" : ["babel-preset-env", "react", "es2016", "es2015"]
+    "presets" : ["env", "react"],
+    "plugins": [
+      "transform-es2015-arrow-functions"
+    ]
   }
