--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-    "presets" : ["env", "react"],
+    "presets" : ["babel-preset-env", "react"],
     "plugins": [
       "transform-es2015-arrow-functions"
     ]
