--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test deployment of node",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js",
+    "start": "node main.js && node_module\\.bin\\webpack -d",
     "dev-start": "node_modules\\.bin\\webpack -d && nodemon main.js",
     "build": "node_modules\\.bin\\webpack -d"
   },
