--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "eslint-plugin-react": "^7.4.0",
     "express": "^4.16.2",
     "jquery": "^3.2.1",
+    "jsonwebtoken": "^8.1.0",
     "loader-runner": "^2.3.0",
     "multer": "^1.3.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "tedious": "^2.0.1",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-node-externals": "^1.6.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
