--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node main.js && node_module\\.bin\\webpack -d",
     "dev-start": "node_modules\\.bin\\webpack -d && nodemon main.js",
-    "build": "node_modules\\.bin\\webpack -d"
+    "build": "node_modules\\.bin\\webpack -p"
   },
   "repository": {
     "type": "git",
